--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,15 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>Dashboard</name>
 	<properties>
-		<wicket.version>1.5.3</wicket.version>
+		<wicket.version>6.6.0</wicket.version>
 		<jetty.version>6.1.25</jetty.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<restlet.version>2.0.1</restlet.version>
 		<twitter4j.version>2.2.5</twitter4j.version>
 		<jackson.version>1.8.7</jackson.version>
-		<wiquery.version>1.5.3</wiquery.version>
-		<wqplot.version>0.2-SNAPSHOT</wqplot.version>
+		<wqplot.version>1.6-SNAPSHOT</wqplot.version>
 		<spring.version>3.0.6.RELEASE</spring.version>
+		<commons-logging.version>1.1.2</commons-logging.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -39,7 +39,7 @@
 			<dependency>
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging</artifactId>
-				<version>99.0-does-not-exist</version>
+				<version>${commons-logging.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -84,16 +84,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.odlabs.wiquery</groupId>
-			<artifactId>wiquery-core</artifactId>
-			<version>${wiquery.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.odlabs.wiquery</groupId>
-			<artifactId>wiquery-jquery-ui</artifactId>
-			<version>${wiquery.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>nl.topicus</groupId>
@@ -175,13 +165,6 @@
 			<artifactId>jetty-management</artifactId>
 			<version>${jetty.version}</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<!-- matis -->
-		<dependency>
-			<groupId>org.mantisbt.mantisconnect</groupId>
-			<artifactId>client-api</artifactId>
-			<version>1.2.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis</groupId>
